# audio_classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: svm_config.json
src/audio_classifier/: __utils__.py  dataset.py  feature_extraction.py  inference.py  train.py
